--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: sans-serif;
   background-attachment: fixed;
   background-size: cover;
+  background-image: url(hatter.jpg);
 }
 
 #content {
@@ -57,4 +58,29 @@ table {
 table {
   margin-right: 20px;
   background-color: rgba(227, 225, 233, 0.3);
+  border-collapse: collapse;
+}
+
+span {
+  font-weight: 900;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+th {
+  background-color: #0A82F7;
+  color: white;
+}
+
+tr,td, th{
+  border: 1px solid black;
+  padding: 15px;
+  text-align: center;
+}
+
+a{
+  text-decoration: none;
+}
+
+a:hover{
+  color: yellow;
 }
